# openPMD_raytrace_API

./: .clang-format  CMakeLists.txt  Doxyfile.in  README.md  setup.py
.github/workflows/: cmake.yml
cpp/: CMakeLists.txt  Doxyfile.in
cpp/include/: openPMD_io.hh  openpmd_output_formats.h  ray.hh  rays.hh
cpp/packaging/: CPackConfig.cmake
cpp/src/: openPMD_io.cc  rays.cc
cpp/tests/: CMakeLists.txt  doctest.cpp
doc/: usage.md
docs/: 1__structure_8cpp_source.html  6__dump__filebased__series_8cpp_source.html  7__extended__write__serial_8cpp_source.html  7__extended__write__serial_8py_source.html  8a__benchmark__write1D2D__parallel_8cpp_source.html  8b__benchmark__read1D2D__parallel_8cpp_source.html  9__particle__write__serial_8py_source.html  ADIOS1Auxiliary_8hpp_source.html  ADIOS1FilePosition_8hpp_source.html  ADIOS1IOHandlerImpl_8hpp_source.html  ADIOS1IOHandler_8cpp_source.html  ADIOS1IOHandler_8hpp_source.html  ADIOS2Auxiliary_8cpp_source.html  ADIOS2Auxiliary_8hpp_source.html  ADIOS2FilePosition_8hpp_source.html  ADIOS2IOHandler_8cpp_source.html  ADIOS2IOHandler_8hpp_source.html  APITest_8py_source.html  AbstractFilePosition_8hpp_source.html  AbstractIOHandlerHelper_8cpp_source.html  AbstractIOHandlerHelper_8hpp_source.html  AbstractIOHandlerImplCommon_8hpp_source.html  AbstractIOHandlerImpl_8hpp_source.html  AbstractIOHandler_8hpp_source.html  Access_8cpp_source.html  Access_8hpp_source.html  Attributable_8hpp_source.html  Attribute_8hpp_source.html  AuxiliaryTest_8cpp_source.html  BaseRecordComponent_8hpp_source.html  BaseRecord_8cpp_source.html  BaseRecord_8hpp_source.html  BlockSlicer_8hpp_source.html  CMakeFiles_23_811_84_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_source.html  CMakeFiles_23_811_84_2CompilerIdC_2CMakeCCompilerId_8c_source.html  CMakeFiles_2feature__tests_8c_source.html  CMakeFiles_2feature__tests_8cxx_source.html  CONTRIBUTING_8md_source.html  CatchMain_8cpp_source.html  CatchRunner_8cpp_source.html  (+1540 more)
docs/html/: README_8md_source.html  annotated.html  classes.html  classrays.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  rays_8hh.html  rays_8hh__incl.map  rays_8hh_source.html
docs/html/search/: all_0.js  all_4.js  all_6.js  functions_3.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+64 more)
include/: openPMD_io.hh  openpmd_output_formats.h  ray.hh
python/: CMakeLists.txt
python/src/: openPMD_io.cpp
src/: openPMD_io.cc  openPMD_io.hh  ray.hh  rays.cc  rays.hh
test/: CMakeLists.txt  doctest.cpp  test1.cpp
